@@ -2,6 +2,7 @@ Revision history for Perl extension Authen::Libwrap.
 
 0.23    …
 	- Add github URL to bug POD.
+        - thanks BDRACO: Avoid no warnings as it creates a cop_warnings for every cop in the scope
 
 0.22    Sun Jul 06 17:59:49 2010
         - thanks BDRACO: needless importing is slow
